2024-04-18T16:16:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8741315697 # 194
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 13 25
* notice: prev accum: outdated-unq outdated-all / unq all: 772 2428 / 787 2455
* notice: next accum: outdated-unq outdated-all / unq all: 774 2430 / 787 2455
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-04] / []

2024-04-18T00:58:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8730759666 # 192
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 15 27
* notice: prev accum: outdated-unq outdated-all / unq all: 770 2424 / 785 2451
* notice: next accum: outdated-unq outdated-all / unq all: 772 2428 / 787 2455
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [2024-04-03] / [2024-04-17]

2024-04-17T08:16:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8718569411 # 190
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 14 27
* notice: prev accum: outdated-unq outdated-all / unq all: 770 2424 / 784 2450
* notice: next accum: outdated-unq outdated-all / unq all: 770 2424 / 785 2451
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-17]

2024-04-16T16:17:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8709030955 # 188