@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-18T16:16:56Z",
-  "count_outdated" : 2430,
-  "uniques_outdated" : 774,
+  "timestamp" : "2024-04-20T00:59:11Z",
+  "count_outdated" : 2431,
+  "uniques_outdated" : 775,
   "count" : 2455,
   "uniques" : 787,
   "views" : [
-    {
-      "timestamp": "2024-04-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-09T00:00:00Z",
       "count": 11,
