@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 13,
+  "count": 24,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2024-04-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-09T00:00:00Z",
       "count": 11,
